Sandbox stuff, LZ compression

--- a/embed.html
+++ b/embed.html
@@ -24,6 +24,7 @@ canvas {
         <meta charset="utf-8">
         <title>District</title>
 
+        <script language="javascript" src="./js/lz/lz-string.js" type="text/javascript"></script>
         <script language="javascript" src="./js/layer.js" type="text/javascript"></script>
         <script language="javascript" src="./js/values.js" type="text/javascript"></script>
         <script language="javascript" src="./js/input.js" type="text/javascript"></script>
