--- a/sandbox.html
+++ b/sandbox.html
@@ -40,7 +40,7 @@
                 <div id="district"></div>
 
                 <div class="openContainer">
-                    <div class="open" onclick="openToolbox();">&#9776;</div>
+                    <div class="openButton" onclick="openToolbox();">&#9776;</div>
                 </div>
 
                 <div class="tools" id="toolbox">
