--- a/sandbox.html
+++ b/sandbox.html
@@ -34,7 +34,8 @@
         </script>
 
         <div class="page">
-            <h3>DISTRICT</h3>
+            <div class="title">DISTRICT</div>
+
             <div class="sandbox">
 
                 <div id="district"></div>
@@ -105,6 +106,11 @@
                     </div>
                 </div>
             </div>
+
+            <div class="redirect">
+                <a href="http://polytrope.com/district/">Haven't played the original game yet? Click here!</a>
+            </div>
+
         </div>
         <script type="text/javascript">
             var editing = false;
