--- a/index.html
+++ b/index.html
@@ -175,6 +175,13 @@
                 }
             }
 
+            trackOutboundLink = function(url) {
+               ga('send', 'event', 'outbound', 'click', url, {
+                 'transport': 'beacon',
+                 'hitCallback': function(){document.location = url;}
+               });
+            }
+
             if (window.location.href.includes("skip")) skip();
             else advance();
 
