Tracking analytics logging

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
             }
 
             trackOutboundLink = function(url) {
+                console.log("Tracking outbound link to "+url);
                ga('send', 'event', 'outbound', 'click', url, {
                  'transport': 'beacon',
                  'hitCallback': function(){document.location = url;}
