--- a/sandbox.html
+++ b/sandbox.html
@@ -259,7 +259,7 @@
                 url += board.getQueryString();
                 linkField.value = url;
 
-                window.location.href = url;
+                window.history.replaceState({}, "District | Sandbox", url);
 
                 var url = embedWindow.location.href;
                 if (url.includes("?")) url = url.slice(0, url.indexOf("?"));
