--- a/sandbox.html
+++ b/sandbox.html
@@ -21,6 +21,7 @@
         <meta property="twitter:card" content="summary_large_image">
 
         <script src="http://code.jquery.com/jquery.min.js"></script>
+        <script language="javascript" src="./js/util.js" type="text/javascript"></script>
         <link rel="icon" type="image/png" href="/favicon.png"/>
         <link rel="stylesheet" href="./css/sandbox.css">
 
@@ -103,17 +104,26 @@
                             <input class="field" id="embedField" type="text" readonly="true" onClick="this.select();" value="embed...">
                             <div class="name">Embed:</div>
                         </div>
+
+                        <div class="spacer"></div>
+                        
+                        <div class="url">
+                            <input class="field" id="resolutionField" type="text" onchange="refreshResolution();" value="640">
+                            <div class="name">Size:</div>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="redirect">
-                <a href="http://polytrope.com/district/">Haven't played the original game yet? Click here!</a>
+                Level editor for <a href="http://polytrope.com/district/">District</a>, a game about representation and redistricting.
             </div>
 
         </div>
         <script type="text/javascript">
+
             var editing = false;
+
             toggleToolbox = function(){
                 if (editing) closeToolbox();
                 else openToolbox();
@@ -139,8 +149,19 @@
                 }
             }
 
+            var frame = null;
             var board = null;
             var embedWindow = null;
+
+            // Totally awful hacked in way of managing resolution.
+            var resolution = getQueryString("res");
+            if (resolution == null) resolution = 640;
+            else {
+                var frame = document.getElementById('district');
+                resolution = parseInt(resolution);
+            }
+
+            var game = document.getElementById('district');
 
             var rowCounter = document.getElementById('rowCounter');
             var columnCounter = document.getElementById('columnCounter');
@@ -150,6 +171,9 @@
 
             var linkField = document.getElementById('linkField');
             var embedField = document.getElementById('embedField');
+            var resolutionField = document.getElementById('resolutionField');
+
+            resolutionField.value = resolution;
 
             addRow = function(){
                 console.log("Sandbox: Adding Row");
@@ -229,6 +253,14 @@
                 }
             }
 
+            refreshResolution = function(){
+                var res = parseInt(resolutionField.value);
+                if (res != resolution) {
+                    setResolution(res);
+                    resolutionField.value = resolution;
+                }
+            }
+
             refreshToolbox = function(){
                 console.log("Refreshing Sandbox Toolbox");
 
@@ -264,30 +296,44 @@
                 var url = embedWindow.location.href;
                 if (url.includes("?")) url = url.slice(0, url.indexOf("?"));
                 url += board.getQueryString();
-                embedField.value = "<iframe src=\""+url+"\" width=\"640px\" height=\"640px\" style=\"border:1px solid black\"></iframe>";
-            }
-        </script>
+                embedField.value = "<iframe src=\""+url+"\" width=\""+resolution+"px\" height=\""+resolution+"px\" style=\"border:1px solid black\"></iframe>";
 
-        <script type="text/javascript">
-            var game = document.getElementById('district');
+            }
+
+            setResolution = function(RESOLUTION){
+                if (!RESOLUTION) RESOLUTION = 640;
+                if (RESOLUTION < 256) RESOLUTION = 256;
+                if (RESOLUTION > 1024) RESOLUTION = 1024;
+                resolution = RESOLUTION;
+                frame.width = resolution;
+                frame.height = resolution;
+                setEmbedUrl("?=&res="+resolution+"&spec="+getQueryString("spec"));
+            }
+
+            setEmbedUrl = function(query){
+                var embedURL = "./embed.html"+query;
+                game.innerHTML = "<iframe id=\"frame\" src=\""+embedURL+"\" width=\""+resolution+"px\" height=\""+resolution+"px\" style=\"border:1px solid black\"></iframe>";
+
+                frame = game.querySelector("#frame");
+                frame.addEventListener('load', function(){
+                    console.log("FRAME LOADED - Fetching board");
+                    embedWindow = frame.contentWindow;
+                    board = frame.contentWindow.getBoard();
+                    board.setRefreshQueryCallback(refreshToolbox);
+                    refreshToolbox();
+                    if (!window.location.href.includes('?')) openToolbox();
+                });
+            }
+
             var url = window.location.href;
             var query = url.split('?')[1];
             if (query == undefined) query = "";
             else query = "?"+query;
 
-            var embedURL = "./embed.html"+query;
-            game.innerHTML = "<iframe id=\"frame\" src=\""+embedURL+"\" width=\"640px\" height=\"640px\" style=\"border:1px solid black\"></iframe>";
+            setEmbedUrl(query);
+            //game.innerHTML = "<iframe id=\"frame\" src=\""+embedURL+"\" width=\""+resolution+"px\" height=\""+resolution+"px\" style=\"border:1px solid black\"></iframe>";
 
 
-            var frame = game.querySelector("#frame");
-            frame.addEventListener('load', function(){
-                console.log("FRAME LOADED - Fetching board");
-                embedWindow = frame.contentWindow;
-                board = frame.contentWindow.getBoard();
-                board.setRefreshQueryCallback(refreshToolbox);
-                refreshToolbox();
-                if (!window.location.href.includes('?')) openToolbox();
-            });
         </script>
 
         <div id="footer-container"></div>
