--- a/sandbox.html
+++ b/sandbox.html
@@ -111,6 +111,8 @@
                             <input class="field" id="resolutionField" type="text" onchange="refreshResolution();" value="640">
                             <div class="name">Size:</div>
                         </div>
+
+                        <div class="spacer"></div>
                     </div>
                 </div>
             </div>
@@ -322,6 +324,7 @@
                     board.setRefreshQueryCallback(refreshToolbox);
                     refreshToolbox();
                     if (!window.location.href.includes('?')) openToolbox();
+                    board.setMutable(editing);
                 });
             }
 
