height again dang footer...

--- a/sandbox.html
+++ b/sandbox.html
@@ -121,6 +121,7 @@
                 Level editor for <a href="http://polytrope.com/district/">District</a>, a game about representation and redistricting.
             </div>
 
+            <div class="spacer" style="height:32px;"></div>
         </div>
         <script type="text/javascript">
 
